# double-zero-seven

./: .gitignore  README.md  all.yaml
skeleton/gitops-template/app-of-apps/: application-dev.yaml  kustomization.yaml
skeleton/gitops-template/components/http/base/: deployment.yaml  kustomization.yaml  model-config.yaml
skeleton/gitops-template/components/http/overlays/development/: kustomization.yaml
skeleton/gitops-template/components/http/overlays/development/tekton-repositories/: gitops-repository.yaml  source-repository.yaml
skeleton/gitops-template/docs/: index.md
skeleton/source-repo/config/: agents.yaml  tasks.yaml  tools.yaml
skeleton/techdoc/: mkdocs.yml
skeleton/techdoc/docs/: index.md
skeleton/template-card-techdocs/app/docs/common/: index.md
skeleton/template-card-techdocs/app/docs/crew-ai/: application.md
skeleton/template-card-techdocs/app/docs/langgraph/: application.md
templates/crew-ai/: template.yaml
templates/crew-ai/content/: Containerfile  crew_ai_crew.py  pyproject.toml  quick_check.py
templates/crew-ai/content/config/: agents.yaml  tasks.yaml
templates/crew-ai/crew_ai_crew/: template.yaml
templates/crew-ai/crew_ai_crew/content/: Containerfile  crew_ai_crew.py  pyproject.toml
templates/crew-ai/crew_ai_crew/docs/: application.md  index.md
templates/crew-ai/docs/: application.md  index.md
templates/langgraph/: template.yaml
templates/langgraph/content/: Containerfile  langgraph_crew.py  pyproject.toml
templates/langgraph/content/config/: agents.yaml  tasks.yaml
templates/langgraph/docs/: application.md  index.md
